# Spectrum

./: .gitignore  Cargo.toml  spectrum.db
src/: main.rs  static_assets.rs
src/endpoints/: list_people.rs  list_pronouns.rs  mod.rs  signin.rs  update.rs
static/: index.html  masthead.css
